# vago-python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py
tests/: test_client.py
vago/: __init__.py  client.py  exceptions.py
vago/resources/: __init__.py  analytics.py  channels.py  jobs.py  products.py  tenants.py  users.py
