[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vago-cloud"
dynamic = ["version"]
description = "Official Python SDK for VAGO Cloud API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VAGO Cloud"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://vagocloud.com"
Repository = "https://github.com/r-adrianzen/vago-python-sdk"
Issues = "https://github.com/r-adrianzen/vago-python-sdk/issues"

[tool.hatch.version]
path = "vago/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["vago"]

[tool.hatch.build.targets.sdist]
include = [
    "vago/",
    "tests/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
